<package format="2">
	<name>catch_ros</name>
	<description>ROS integration for the Catch unit test framework</description>
	<version>0.5.0</version>
	<license>BSD</license>
	<author email="max.schwarz@ais.uni-bonn.de">Max Schwarz</author>
	<maintainer email="max.schwarz@ais.uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
</package>

